[ADD] MemoFragment에서 넘겨 받은 메모 정보 MemoDetail 상에 표시

--- a/app/src/main/res/layout/fragment_keep_detail.xml
+++ b/app/src/main/res/layout/fragment_keep_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.cocaine.myply.feature.ui.keep.KeepDetailViewModel" />
@@ -13,99 +14,112 @@
             type="com.cocaine.myply.feature.ui.keep.KeepDetailFragment" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/beige">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/keep_detail_appbar"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent"
+            android:background="@color/beige">
 
-            <ImageButton
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/ic_back"
-                android:onClick="@{() -> view.goBack()}"
-                android:background="@android:color/transparent" />
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/keep_detail_appbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageButton
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="@android:color/transparent"
+                    android:onClick="@{() -> view.goBack()}"
+                    android:src="@drawable/ic_back" />
+
+                <TextView
+                    style="@style/H3_Semibold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/keep_detail_title"
+                    android:textColor="@color/gray_90" />
+
+                <ImageButton
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="19dp"
+                    android:background="@android:color/transparent"
+                    android:onClick="@{() -> view.moveToKeepShare()}"
+                    android:src="@drawable/ic_share" />
+            </com.google.android.material.appbar.MaterialToolbar>
+
+            <include
+                android:id="@+id/keep_detail_playlist"
+                layout="@layout/item_keep_detail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="20dp"
+                android:minHeight="284dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/keep_detail_appbar"
+                app:memo="@{viewModel.memoDetail}" />
+
+            <EditText
+                android:id="@+id/keep_detail_memo"
+                style="@style/Body1_Medium"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="20dp"
+                android:background="@color/white"
+                android:enabled="false"
+                android:gravity="start"
+                android:hint="@string/keep_detail_placeholder"
+                android:maxLength="200"
+                android:minHeight="120dp"
+                android:paddingStart="16dp"
+                android:paddingTop="45dp"
+                android:paddingEnd="16dp"
+                android:paddingBottom="16dp"
+                android:text="@{viewModel.memoDetail.body}"
+                android:textColor="@{viewModel.memoDetail.body.length() > 0 ? @color/black : @color/gray_60}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/keep_detail_playlist" />
 
             <TextView
-                style="@style/H3_Semibold"
+                android:id="@+id/keep_detail_memo_title"
+                style="@style/Body2_Bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/keep_detail_title"
-                android:textColor="@color/gray_90" />
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/keep_detail_memo_title"
+                android:textColor="@color/gray_80"
+                app:layout_constraintStart_toStartOf="@id/keep_detail_memo"
+                app:layout_constraintTop_toTopOf="@id/keep_detail_memo" />
 
             <ImageButton
+                android:id="@+id/keep_detail_edit_btn"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/ic_share"
-                android:layout_gravity="end"
-                android:layout_marginEnd="19dp"
+                android:layout_marginEnd="16dp"
                 android:background="@android:color/transparent"
-                android:onClick="@{() -> view.moveToKeepShare()}"/>
-        </com.google.android.material.appbar.MaterialToolbar>
+                android:onClick="@{() -> view.moveToKeepWrite()}"
+                android:src="@{viewModel.isWrited ? @drawable/ic_edit_active :@drawable/ic_edit_inactive}"
+                app:layout_constraintEnd_toEndOf="@id/keep_detail_memo"
+                app:layout_constraintTop_toTopOf="@id/keep_detail_memo_title" />
 
-        <include
-            android:id="@+id/keep_detail_playlist"
-            layout="@layout/item_playlist"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="284dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/keep_detail_appbar"  />
-
-        <EditText
-            android:id="@+id/keep_detail_memo"
-            style="@style/Body1_Medium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="120dp"
-            android:hint="@string/keep_detail_placeholder"
-            android:background="@color/white"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:paddingTop="45dp"
-            android:paddingBottom="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="20dp"
-            android:enabled="false"
-            android:gravity="start"
-            android:layout_marginEnd="20dp"
-            android:maxLength="200"
-            app:layout_constraintTop_toBottomOf="@id/keep_detail_playlist"
-            app:layout_constraintStart_toStartOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/keep_detail_memo_title"
-            style="@style/Body2_Bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/keep_detail_memo_title"
-            android:textColor="@color/gray_80"
-            app:layout_constraintStart_toStartOf="@id/keep_detail_memo"
-            app:layout_constraintTop_toTopOf="@id/keep_detail_memo" />
-
-        <ImageButton
-            android:id="@+id/keep_detail_edit_btn"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:onClick="@{() -> view.moveToKeepWrite()}"
-            android:src="@{viewModel.isWrited ? @drawable/ic_edit_active :@drawable/ic_edit_inactive}"
-            android:layout_marginEnd="16dp"
-            android:background="@android:color/transparent"
-            app:layout_constraintTop_toTopOf="@id/keep_detail_memo_title"
-            app:layout_constraintEnd_toEndOf="@id/keep_detail_memo"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <!-- for view margin -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toBottomOf="@id/keep_detail_memo"
+                app:layout_constraintBottom_toBottomOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
