--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -84,7 +84,8 @@
                         android:background="@color/black"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@id/share_name"
-                        app:layout_constraintTop_toBottomOf="@id/share_name" />
+                        app:layout_constraintTop_toBottomOf="@id/share_name"
+                        app:update_image="@{viewmodel.memoData.thumbnailURL}" />
 
                     <TextView
                         android:id="@+id/share_title"
@@ -94,7 +95,7 @@
                         android:layout_marginTop="14dp"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        android:text="test"
+                        android:text="@{viewmodel.memoData.title}"
                         app:layout_constraintEnd_toEndOf="@id/share_img"
                         app:layout_constraintStart_toStartOf="@id/share_img"
                         app:layout_constraintTop_toBottomOf="@id/share_img"
@@ -107,6 +108,7 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="3"
+                        android:text="@{viewmodel.memoData.body}"
                         app:layout_constraintEnd_toEndOf="@id/share_title"
                         app:layout_constraintStart_toStartOf="@id/share_title"
                         app:layout_constraintTop_toBottomOf="@id/share_title"
@@ -119,8 +121,8 @@
                         android:layout_height="18dp"
                         android:layout_marginTop="11dp"
                         android:layout_marginBottom="17dp"
-                        android:src="@drawable/ic_logo"
                         android:scaleType="fitXY"
+                        android:src="@drawable/ic_logo"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@id/share_des"
                         app:layout_constraintTop_toBottomOf="@id/share_des" />
