[REFACTOR] MusicResponse를 MusicData로 네이밍 변경

--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="video"
-            type="com.cocaine.myply.feature.data.model.MusicResponse" />
+            type="com.cocaine.myply.feature.data.model.MusicData" />
         <import type="com.cocaine.myply.feature.data.model.MemoState" />
     </data>
 
