[FIX] onResume을 통한 최신 정보 받아오기

--- a/app/src/main/res/layout/item_keep.xml
+++ b/app/src/main/res/layout/item_keep.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="memo"
-            type="com.cocaine.myply.feature.data.model.MemoResponse" />
+            type="com.cocaine.myply.feature.data.model.MemoInfo" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
