--- a/app/src/main/res/layout/fragment_mypage_edit.xml
+++ b/app/src/main/res/layout/fragment_mypage_edit.xml
@@ -32,7 +32,7 @@
                 android:layout_height="24dp"
                 android:layout_gravity="end"
                 android:layout_marginEnd="20dp"
-                tools:background="@color/black" />
+                android:src="@drawable/ic_close" />
         </com.google.android.material.appbar.MaterialToolbar>
 
         <TextView
