--- a/app/src/main/res/layout/item_mypage_edit_keyword.xml
+++ b/app/src/main/res/layout/item_mypage_edit_keyword.xml
@@ -3,9 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="keyword"
             type="String" />
+        <variable
+            name="clicked"
+            type="Boolean" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,14 +19,15 @@
         android:layout_marginBottom="12dp">
 
         <TextView
+            android:id="@+id/keyword_view"
             style="@style/Body2_Semibold"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/gray_30"
             android:paddingHorizontal="12dp"
             android:paddingVertical="8dp"
             android:text="@{@string/hash_keyword(keyword)}"
-            android:textColor="@color/gray_70"
-            tools:background="@color/gray_30"
+            android:textColor="@{clicked ? @color/white : @color/gray_70}"
             tools:text="#재즈" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
