--- a/app/src/main/res/layout/fragment_keep_detail.xml
+++ b/app/src/main/res/layout/fragment_keep_detail.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
             type="com.cocaine.myply.feature.ui.keep.KeepDetailViewModel" />
@@ -66,7 +65,8 @@
                 android:minHeight="284dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/keep_detail_appbar"
-                app:memo="@{viewModel.memoDetail}" />
+                app:memo="@{viewModel.memoDetail}"
+                app:listener="@{view}"/>
 
             <EditText
                 android:id="@+id/keep_detail_memo"
