--- a/app/src/main/res/layout/item_keep.xml
+++ b/app/src/main/res/layout/item_keep.xml
@@ -13,9 +13,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="180dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:minHeight="180dp">
 
         <ImageView
             android:id="@+id/keep_img"
@@ -33,12 +33,12 @@
             android:id="@+id/keep_like"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_like_active"
-            android:background="@android:color/transparent"
-            android:layout_marginTop="12dp"
             android:layout_marginStart="12dp"
-            app:layout_constraintTop_toTopOf="@id/keep_img"
-            app:layout_constraintStart_toStartOf="@id/keep_img"/>
+            android:layout_marginTop="12dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_like_active"
+            app:layout_constraintStart_toStartOf="@id/keep_img"
+            app:layout_constraintTop_toTopOf="@id/keep_img" />
 
         <TextView
             android:id="@+id/keep_title"
@@ -46,29 +46,30 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="15dp"
+            android:background="@android:color/transparent"
             android:ellipsize="end"
             android:maxLines="2"
             android:text="@{memo.title}"
             android:textColor="@color/black"
-            android:background="@android:color/transparent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/keep_img"
             app:layout_constraintTop_toTopOf="@id/keep_img"
             tools:text="song title\n111" />
 
-        <com.google.android.material.chip.ChipGroup
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/keep_tags"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="@id/keep_guideline"
+            app:layout_constraintEnd_toEndOf="@id/keep_guideline"
             app:layout_constraintStart_toStartOf="@id/keep_title"
             app:layout_constraintTop_toBottomOf="@id/keep_title"
-            app:layout_constraintBottom_toBottomOf="@id/keep_img"
-            app:layout_constraintEnd_toEndOf="@id/keep_title"
-            app:singleLine="true"
-            tools:itemCount="5" />
+            tools:itemCount="3"
+            tools:listitem="@layout/item_mypage_keyword">
+
+        </androidx.recyclerview.widget.RecyclerView>
 
         <View
             android:id="@+id/keep_guideline"
