--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -52,26 +52,18 @@
             tools:text="[Playlist] 백예린의 수족관"
             tools:background="@android:color/transparent"/>
 
-        <HorizontalScrollView
-            android:id="@+id/playlist_tags_scroll"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/playlist_tags"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toStartOf="@id/playlist_heart"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/playlist_heart"
             app:layout_constraintBottom_toBottomOf="@id/playlist_heart"
-            tools:background="@android:color/transparent">
-
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/playlist_tags"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:singleLine="true"
-                tools:itemCount="4" />
-        </HorizontalScrollView>
+            tools:background="@android:color/transparent"/>
 
         <ImageView
             android:id="@+id/playlist_heart"
@@ -82,7 +74,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
-            app:layout_constraintStart_toEndOf="@id/playlist_tags_scroll"
+            app:layout_constraintStart_toEndOf="@id/playlist_tags"
             app:layout_constraintTop_toBottomOf="@id/playlist_title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
