--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph"
-    app:startDestination="@id/homeFragment">
+    android:id="@+id/nav_graph">
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.cocaine.myply.feature.ui.home.HomeFragment"
@@ -71,9 +70,29 @@
     <fragment
         android:id="@+id/onBoardingFragment"
         android:name="com.cocaine.myply.feature.ui.onboarding.OnBoardingFragment"
-        android:label="OnBoardingFragment" />
+        android:label="OnBoardingFragment" >
+        <action
+            android:id="@+id/action_onBoardingFragment_to_signupNicknameFragment"
+            app:destination="@id/signupNicknameFragment" />
+    </fragment>
     <dialog
         android:id="@+id/myPlyTwoButtonDialog"
         android:name="com.cocaine.myply.feature.ui.dialog.MyPlyTwoButtonDialog"
         android:label="MyPlyTwoButtonDialog" />
+    <fragment
+        android:id="@+id/signupNicknameFragment"
+        android:name="com.cocaine.myply.feature.ui.onboarding.SignupNicknameFragment"
+        android:label="SignupNicknameFragment" >
+        <action
+            android:id="@+id/action_signupNicknameFragment_to_signupKeywordFragment"
+            app:destination="@id/signupKeywordFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/signupKeywordFragment"
+        android:name="com.cocaine.myply.feature.ui.onboarding.SignupKeywordFragment"
+        android:label="SignupKeywordFragment" >
+        <action
+            android:id="@+id/action_signupKeywordFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
